fix: add resizeObserver to remove menu and header initial gap

--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -1,4 +1,5 @@
 header {
+  z-index: 10;
   text-align: center;
   background-color: #01091e;
   padding-block: 2rem 1rem;
